<resources>
    <string name="app_name">MalwarePolymorphism</string>

    <!--    Login Page-->
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="new_user">New User?</string>

    <!--    Register page-->
    <string name="register">Register</string>
    <string name="name">Name</string>

    <!--    Navbar -->
    <string name="meal_plan">Meal Plan</string>
    <string name="shopping_list">Shopping List</string>
    <string name="recipes">Recipes</string>
    <string name="ingredients">Ingredients</string>
    <string name="register_and_login">Register and Login</string>
    <string name="create_an_account">Create an account</string>

    <!--    Add/Confirm Ingredient -->
    <string name="description">Description</string>
    <string name="bbd">Best Before Date</string>
    <string name="location">Location</string>
    <string name="amount">Amount</string>
    <string name="unit">Unit</string>
    <string name="category">Category</string>
    <string name="pantry">Pantry</string>
    <string name="fridge">Fridge</string>
    <string name="freezer">Freezer</string>
    <string name="save">SAVE</string>
    <string name="delete">DELETE</string>
    <string name="cancel">CANCEL</string>

    <!--    Add Recipe -->
    <string name="title">Title</string>
    <string name="prepTime">Preparation Time</string>
    <string name="numServings">Number of Servings</string>
    <string name="comments">Comments</string>
    <string name="choose_an_image">CHOOSE AN IMAGE:</string>
    <string name="browse">BROWSE</string>
    <string name="ingredients_caps">INGREDIENTS</string>

    <!--    Add Meal Plan -->
    <string name="servings_slider_str">NUMBER OF SERVINGS</string>
    <string name="numServings_caps">NUMBER OF SERVINGS</string>
    <string name="meal_plan_date">Date</string>
    <string name="recipes_caps">RECIPES</string>
    <string name="best_before"> </string>

</resources>