<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/meal_plan_title_text_field"
        android:layout_width="376dp"
        android:layout_height="65dp"
        android:layout_marginTop="76dp"
        android:hint="@string/title"
        app:layout_constraintEnd_toEndOf="@+id/meal_plan_date_text_field"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="@+id/meal_plan_date_text_field"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/numServings_slider_text"
        style="@style/TextAppearance.Material3.DisplayLarge"
        android:layout_width="152dp"
        android:layout_height="20dp"
        android:text="@string/numServings_caps"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle=""
        app:layout_constraintBottom_toTopOf="@+id/servings_slider"
        app:layout_constraintStart_toStartOf="@+id/meal_plan_title_text_field"
        app:layout_constraintTop_toBottomOf="@+id/meal_plan_title_text_field"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/buttonGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/meal_plan_date_text_field"
        android:layout_width="376dp"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:hint="@string/meal_plan_date"
        app:endIconDrawable="@drawable/ic_calendar"
        app:endIconMode="custom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/servings_slider">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.slider.Slider
        android:id="@+id/servings_slider"
        android:layout_width="376dp"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/servings_slider_str"
        android:stepSize="1.0"
        android:value="0.0"
        android:valueFrom="0.0"
        android:valueTo="10.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meal_plan_title_text_field" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="100dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cancel_button"
        app:layout_constraintTop_toBottomOf="@+id/add_ingredients" />

    <Button
        android:id="@+id/add_recipes"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/recipes_caps"
        app:icon="@drawable/ic_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meal_plan_date_text_field" />

    <Button
        android:id="@+id/add_ingredients"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/ingredients_caps"
        app:icon="@drawable/ic_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_recipes" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="110dp"
        android:layout_height="49dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="100dp"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/save_button"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toEndOf="@+id/cancel_button"
        app:layout_constraintTop_toBottomOf="@+id/add_ingredients" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="110dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="100dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_ingredients" />


</androidx.constraintlayout.widget.ConstraintLayout>