<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/recipe_title_text_field"
        android:layout_width="376dp"
        android:layout_height="65dp"
        android:layout_marginTop="70dp"
        android:hint="@string/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/prepTime_text_field"
        android:layout_width="376dp"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/prepTime"
        app:layout_constraintEnd_toEndOf="@+id/recipe_title_text_field"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/recipe_title_text_field"
        app:layout_constraintTop_toBottomOf="@+id/recipe_title_text_field">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/numServings_text_field"
        android:layout_width="376dp"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/numServings"
        app:layout_constraintEnd_toEndOf="@+id/prepTime_text_field"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/prepTime_text_field"
        app:layout_constraintTop_toBottomOf="@+id/prepTime_text_field">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/category_text_field"
        android:layout_width="376dp"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/category"
        app:layout_constraintEnd_toEndOf="@+id/numServings_text_field"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/numServings_text_field"
        app:layout_constraintTop_toBottomOf="@+id/numServings_text_field">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/comments_text_field"
        android:layout_width="376dp"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/comments"
        app:layout_constraintEnd_toEndOf="@+id/category_text_field"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/category_text_field"
        app:layout_constraintTop_toBottomOf="@+id/category_text_field">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/location_text"
        style="@style/TextAppearance.Material3.DisplayLarge"
        android:layout_width="181dp"
        android:layout_height="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/choose_an_image"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/browseButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/comments_text_field"
        app:layout_constraintTop_toBottomOf="@+id/comments_text_field" />

    <Button
        android:id="@+id/browseButton"
        android:layout_width="110dp"
        android:layout_height="49dp"
        android:layout_marginStart="280dp"
        android:layout_marginTop="10dp"
        android:text="@string/browse"
        app:layout_constraintEnd_toEndOf="@+id/comments_text_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comments_text_field" />

    <Button
        android:id="@+id/add_ingredients"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/ingredients_caps"
        app:icon="@drawable/ic_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/browseButton" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="110dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="100dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/delete_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_ingredients" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="110dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="100dp"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/save_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cancel_button"
        app:layout_constraintTop_toBottomOf="@+id/add_ingredients" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="110dp"
        android:layout_height="49dp"
        android:layout_marginStart="284dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="100dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/delete_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_ingredients" />

</androidx.constraintlayout.widget.ConstraintLayout>